--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 .Ruserdata
 Hierarchical-Modelling/dataset3/07_Output/*
 Hierarchical-Modelling/z-unconstrained/dataset3/07_Output/*
+Hierarchical-Modelling/t0-unconstrained/dataset3/07_Output/*
